--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<!-- Company Name & Logo -->
 		<div class="company_logo">
 			<a href="#">
-				<img src="images/logo.PNG" alt="Logo">			
+				<img src="images/logo.png" alt="Logo">			
 			</a>
 		</div>
 		<!-- Menu Part -->
